[TOREE-547] Remove unnecessary Java options (#213)